<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/login_activity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="161dp"


        android:layout_alignParentTop="true"

        android:background="@drawable/backchatup" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="342dp"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginEnd="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="342dp"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/prompt_password"

            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginEnd="20dp" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_shape"
        android:paddingTop="20dp"
        android:text="@string/action_sign_in"
        android:textColor="#ffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/forgotPass"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout

        android:id="@+id/login_layout_or"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:orientation="horizontal">

        <View

            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/or" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark" />
    </LinearLayout>

    <TextView

        android:id="@+id/signup_with_Email_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/signUpBTN"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/btn_layout_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/signUpEmailBTN"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout

        android:id="@+id/login_layout_or_2"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:orientation="horizontal">

        <View

            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/or" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/design_default_color_primary_dark" />
    </LinearLayout>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="216dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />




</LinearLayout>