<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nav_background"
    android:orientation="vertical"
    android:padding="5dp"
    android:paddingBottom="30dp"
    android:theme="@style/Theme.UserDialog.AppCompat"
    tools:context=".PitchSpeachActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        app:titleTextColor="@color/MainColor">

    </android.support.v7.widget.Toolbar>

    <EditText

        android:id="@+id/TextToSpeech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/textToSpeach"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Pitch"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pitch_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/pitch_seekbar"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/Speed"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView

            android:id="@+id/speed_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/speed_seekbar"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:outlineSpotShadowColor="@color/white" />

    <Button
        android:id="@+id/speekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_shape"
        android:enabled="false"
        android:gravity="center_horizontal"
        android:text="@string/pressToHear"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>