<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:background="@drawable/nav_background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:theme="@style/Theme.UserBigDialog.AppCompat"
    tools:context=".VideoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/post_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@drawable/circle_shape"
                android:text="@string/postVideo"
                android:textColor="@color/com_facebook_button_send_background_color_pressed" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <VideoView


        android:id="@+id/video_preview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/start_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/circle_shape"
            android:text="@string/playBtn"
            android:textColor="@color/com_facebook_button_send_background_color_pressed" />

        <Button
            android:id="@+id/stop_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/circle_shape"
            android:text="@string/stop"
            android:textColor="@color/com_facebook_button_send_background_color_pressed" />

    </RelativeLayout>


</LinearLayout>